Neil is on the train

--- a/abstract.tex
+++ b/abstract.tex
@@ -21,6 +21,9 @@
 
 %I will need to fix the references
 \addbibresource{football_refs.bib}
+
+% NO .BIB ON GITHUB SO I CAN'T COMPILE
+
 \begin{document}
 \title{Reported cases of alcohol-related domestic abuse increase following the victory of the England national football team}
 \author{Anna Trendl}
@@ -200,10 +203,7 @@ Observations & 6,034 & 6,034 & 6,034 & 6,034 \\
 
 Our unique dataset further allows us to explore whether England games have similar effects on other types of criminal behaviours. Specifically, we are interested in how an England match day affects the number of reported property-related crimes (including burglary, theft and robbery), public order offences (behaviours that cause offence to the general public), hate crimes (hate incidents and any other racially or religiously aggravated crime), and other violent crimes (excluding cases of domestic abuse). Of particular interest is the effect of football on non-domestic violent crimes, since it is possible that alcohol-fuelled violence that follows an England victory is not limited to family and intimate partner relationships.
 
-Table \ref{othertype_regression} shows the results from a series of negative binomial regression for different types of criminal behaviours. These reveal that while property-related offences are not affected by football, there is an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after and England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, we find a similar pattern for other violent crimes, namely, a 55\%, 95\% [43--72] increase in alcohol-related violent offences when England wins, and a smaller increase on days following an England match. This result highlights that football-induced and alcohol-related violent behaviour is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from male to female cases (although male to male and female to male cases also contribute, see Table \ref{othertype_regression} in the Appendix). These results strongly suggest that football and alcohol make men more violent and mostly towards women. 
-
-
-
+Table \ref{othertype_regression} shows the results from a series of negative binomial regression for different types of criminal behaviours. These reveal that while property-related offences are not affected by football, there is an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after an England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, we find a similar pattern for other violent crimes, namely, a 55\%, 95\% [43--72] increase in alcohol-related violent offences when England wins, and a smaller increase on days following an England match. This result highlights that football-induced and alcohol-related violent behaviour is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from male to female cases (although male to male and female to male cases also contribute, see Table \ref{othertype_regression} in the Appendix). These results strongly suggest that football and alcohol make men more violent, mostly towards women. 
 
 \begin{table}[!htbp]
  \centering 
@@ -215,7 +215,7 @@ Table \ref{othertype_regression} shows the results from a series of negative bin
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{4}{c}{\textit{Dependent variable:}} \\ 
- \\[-1.8ex] & \multicolumn{4}{c}{Number of reported domestic abuse cases per day} \\ 
+		\\[-1.8ex] & \multicolumn{4}{c}{Number of reported incidents \NS{My edit here correct?} per day} \\ 
 \cline{2-5} 
  & Property- & Public Order & Hate & Other \\ 
   & related &  Offences & incidents & violence \\ 
@@ -267,57 +267,66 @@ Figure \ref{fig:threehours} shows a plot of the coefficients from these negative
 
 \begin{figure}
 \centering
- \caption{The temporal dynamics of the effect}
+ \caption{The temporal dynamics of the football-induced increase in alcohol involved domestic abuse}
 \includegraphics[width=0.75\textwidth]{Threehours.pdf}
 \label{fig:threehours}
-\floatfoot{Note: Estimates are from two separate negative binomial regressions (based on tests of overdispersion) with year, month, day of week, three-hour period of day, Christmas, New Year's eve controls}
+		\floatfoot{Note: Estimates are from two separate negative binomial regressions (based on tests of overdispersion) with year, month, day of week, three-hour period of day, Christmas, New Year's eve controls \NS{Y axis need a better label. Perhaps we can transform onto the response scale and plot marginal effects and label it ``Number of cases'' or perhaps we can have it on the exp scale and say ``Increase in domestic abuse (\%)'' and multiply by 100 and relabel 100 as 0\%? Legend ``Alcohol'' to ``Alcohol involved''? YOUR BEAUTIFUL FIGURE DISAPPEARED WHEN I RECOMPILED. wrong figure PDF on github?}}
 \end{figure}
 
 \newpage
 
 \section{Discussion}
 
-While only 23\% of all domestic abuse cases are alcohol-related in our dataset, the estimated effect of a 60\% increase in alcohol-related domestic abuse cases is large, translating into a 0.42 increase in the daily rate of \textit{reported} alcohol-related domestic abuse cases per 100,000 individuals. Our results constitute the first quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England, and that the effect is exclusively limited to male-perpetrated domestic abuse. The effect is about 70\% of a Christmas effect on alcohol-related domestic abuse. \AT{OR This estimate is comparable to a 89\% increase in alcohol-related domestic abuse cases at Christmas?.} \TM{I don't think most people would associate Christmas with huge increases in DA. I think this summary is already really strong without this comparison}
- 
+When England play football, there is a 60\% increase in reported alcohol-related domestic abuse. This is a large increase, and translates into a 0.42 increase in the daily rate of cases per 100,000 of the population against a base rate \NS{X} cases per 100,000. \NS{We are not allowed, by NHB, to make claims about being the ``first'' etc. So I deleted this.} The increase is entirely limited to alcohol-related abuse, even though alcohol-related domestic abuse cases are only 23\% of all domestic abuse. As such, we see this as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England. The effect is also exclusively limited to male-perpetrated domestic abuse, implicating masculinity as the pathway by which football increases abuse.
 
-Our findings show both similarities and differences with results from previous quantitative investigations. Similarly to a previous study, we found that it is male to female abuse that is affected by a sporting event\autocite{Card2011}. However, in the same study, the effect of the match did not depend on alcohol-involvement in the abuse case, and the increase was driven by unexpected losses, whereas our findings suggest that it is a victory that results in the largest increase, and that alcohol plays an instrumental role in the relationship between football and domestic abuse. This discrepancy most likely stems from the contextual differences between the two studies (England, football, national tournaments vs. US, American football, NFL matches), highlighting that the effect on sports-induced emotional cues on domestic abuse are sensitive to the cultural context. 
+Our findings show both similarities and differences with results from previous quantitative investigations. Replicating a previous US study, we found that it is male to female abuse that is affected by a sporting event\autocite{Card2011}. In the US study, the effect of the match did not depend on alcohol-involvement in the abuse case, and the increase was driven by unexpected losses. In contast, we find that victory that results in the largest increase, and that alcohol involvement is critical. This discrepancy most likely stems from the contextual differences between the two studies (England, football, national tournaments vs. US, American football, NFL matches), highlighting that the effect of sports-induced emotional cues on domestic abuse is sensitive to the cultural context. 
 
-Based on the pre-match betting odds, all England victories were expected in our dataset, suggesting that in the context of England's participation in national football tournaments, it is living up to the hopes of the fans that has the largest emotional effect, and perhaps results in increased alcohol consumption\autocite{Davies2018}. Indeed, English newspapers' narratives about the team's performance in these tournaments are characterised with high levels of optimism, expectation and yearning for the glory of the 1966 World Cup\autocite{Vincent2010}. Previous research has demonstrated how the vicarious experience of watching their team play can increase supporter's testosterone and cortisol levels, even when they expect their team to win, suggested to be an adaptive response to the perceived threat to one's social identity\autocite{VanderMeij2012}.
+Based on the pre-match betting odds, in our dataset all of the England victories were expected. Perhaps it is living up to the hopes of the fans that has the largest emotional effect, \NS{Not sure about this next bit} and perhaps results in increased alcohol consumption\autocite{Davies2018}. Indeed, English newspapers' narratives about the team's performance in these tournaments are characterised with high levels of optimism, expectation and yearning for the glory of the 1966 World Cup\autocite{Vincent2010}. Previous research has demonstrated how the vicarious experience of watching their team play can increase supporter's testosterone and cortisol levels, even when they expect their team to win, suggested to be an adaptive response to the perceived threat to one's social identity\autocite{VanderMeij2012}.
 
 %In the context of the World Cup, previous research has reported elevated testosterone levels amongst the winning team's supporters\autocite{Bernhardt1998}.
 
-The largest England-based study found that an England loss results in the largest increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. We find a markedly different pattern, in that it is when England wins we find a substantial increase in alcohol-related domestic abuse, whereas we found no comparable effects for an England loss. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28--64]) and losses (39\%, 95\% CI [18--64]), and no effect when England draws. A stark difference between our results is the lack of an England loss effect in our sample. While our study is different in a few aspects (West Midlands 2010-2018 vs Lancashire, 2002, 2006, 2010), the discrepancy is still puzzling given that these are \textit{national} football tournament matches.
+The largest \NS{We are larger though? Much bigger time span and much bigger population? So...} 
 
-To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to analyse the the patterns by specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}),  using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix). \TM{Do we also want to emphasize the differnce in sample size, and representativeness between west mids and Lancashire?}
+An earlier England-based study found that an England loss results in a increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. We find a different pattern, with the largest increase when England wins for alcohol-involved cases of abuse, but no comparable effects for an England loss. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28--64]) and losses (39\%, 95\% CI [18--64]), and no effect when England draws. Our reanalysis replicates the win effect seen in the current data in the earlier sample, though the absence of a loss effect remains a stark difference between the two studies. While our study is different in a few aspects (West Midlands 2010-2018 vs Lancashire, 2002, 2006, 2010), the discrepancy is still puzzling. \NS{Don't need this? ``given that these are \textit{national} football tournament matches''}.
+
+\NS{We have variables``England win'' and ``England lost'' as variable names. Tenses differ? So maybe ``England win'' and ``England loss'' instead?}
+
+To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to break our analysis into specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}), using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix). \TM{Do we also want to emphasize the differnce in sample size, and representativeness between west mids and Lancashire?} \NS{Yes. Our case numbers must be much higher?}\NS{Puzzled by the number of observations in the table A3---30ish vs 730ish? Better to call it ``Observation days'' to avoid confusing total number of days with total number of cases of abuse?}
 
 
 Does this effect generalise to other sporting events, or is it specific to football?
-It has been suggested previously that popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Since the Six Nations takes place every year with 15 matches for each team as opposed to the World Cup and the European Championship, which are relatively rare, we have many more days when England lost or won. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), which might stem from differences in media coverage and audience numbers between the two tournaments.  \TM{Is it worth including a citation that Rugby is the second most watched sport after football? American reviewers may never have heard of it and assume it is too niche}
+It has been suggested previously that popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Since the Six Nations takes place every year with 15 matches for each team as opposed to the World Cup and the European Championship, which are relatively rare, we have many more days when England lost or won. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), which might stem from differences in media coverage and audience numbers between the two tournaments.  \TM{Is it worth including a citation that Rugby is the second most watched sport after football? American reviewers may never have heard of it and assume it is too niche.} \NS{Yes. Also, is column 1 in Table A5 a repetition from an earlier table. I think we can't repeat the same regression twice.}
 
-We also investigated whether similar patterns are also present in other types of crimes, which are similar to domestic abuse in nature. Specifically, we explored how England's participation in national football tournaments affects alcohol and non-alcohol related reported sexual offences and other types of abuse (child abuse, vulnerable adult abuse). The results show no effect on the number of reported sexual offences, and a slight increase in the number of reported other cases when the tournament is on (see Table \ref{otherabuse} in the Appendix). 
+We also investigated whether similar patterns are also present in other types of crimes, which are similar to domestic abuse in nature, \NS{involving elements of one individual controlling another---not sure if this is a key feature in the abuse literature, I recall it is an element in rape?}. Specifically, we explored how England's participation in national football tournaments affects alcohol and non-alcohol related reported sexual offences and other types of abuse (child abuse, vulnerable adult abuse). There is no effect on the number of reported sexual offences, and a slight increase in the number of reported other cases when the tournament is on (see Table \ref{otherabuse} in the Appendix). \NS{Inference from the null! Actually we have a poorly estimated zero effect, which could be as big as, say, 0.191 +- 1.96ish*0.462, which means we can't rule out even quite big positive or negative effects.}
 
-Our data allows us to explore the characteristics of alcohol-related domestic abuse cases reported on England match days. First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported (in the sense that there was no earlier reported case with the same victim and offender in our dataset), happen inside (in a residential dwelling) as opposed to a public location, or result in an injury. We find no evidence that cases reported on England match days are more likely to be newly reported cases (see Table \ref{Characteristics1} in the Appendix). It could be argued that on England match days, cases of domestic abuse are more likely to happen outside and subsequently get reported compared to non-match days, due to the large number of fans congregating in pubs. Interestingly, reported cases are more likely to happen in public on England lost days but not on England win days, and this effect does not differ by alcohol-involvement in the case. Non-alcohol related cases reported on England lost days are also more likely to result in injury, a pattern that is absent in alcohol-related cases.
+Our data allows us to explore the characteristics of alcohol-related domestic abuse cases reported on England match days. First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported (in the sense that there was no earlier reported case with the same victim and offender in our dataset), happen in (in a residential dwelling) as opposed to a public location, or result in an injury. We find no evidence that cases reported on England match days are more likely to be newly reported cases (see Table \ref{Characteristics1} in the Appendix). It could be argued that on England match days, cases of domestic abuse are more likely to happen outside and subsequently get reported compared to non-match days, due to the large number of fans congregating in pubs. Interestingly, reported cases are more likely to happen in public on England loss days but not on England win days, and this effect does not differ by alcohol-involvement in the case. Non-alcohol related cases reported on England loss days are also more likely to result in injury, a pattern that is absent in alcohol-related cases.
 
 Next we turn to repeated cases (multiple cases with the same victim-offender pair). We are interested in whether the number of days elapsed between two consecutive cases is affected by England football matches. For example, it is possible that England match days bring reported cases of domestic abuse forward, which would have otherwise happened at a later point in time. To investigate this question, we run two negative binomial regressions, where the outcome variable is the number of days elapsed since the last reported case and the number of days until the next case. 
 
-The results show that non-alcohol related cases perpetrated on England loss days are slightly more likely to occur sooner after the previous incident, compared to repeat cases happening on non-match days, but only for non-alcohol related incidents (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days are more likely to be followed by another case of abuse sooner, compared to cases occurring on non-match days, and this pattern is absent from alcohol-related cases. Interestingly, non-alcohol related cases perpetrated on England match days or after and England match, and alcohol-related cases on an England draw day are more likely to be reported sooner. \TM{I think this is a really interesting result! Potentially a nice link back to the Card and Lee results.}
+The results show that non-alcohol related cases on England loss days are slightly more likely to occur sooner after the previous incident, compared to repeat cases happening on non-match days, but only for non-alcohol related incidents (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days are more likely to be followed by another case of abuse sooner, compared to cases occurring on non-match days, and this pattern is absent from alcohol-related cases. Interestingly, non-alcohol related cases perpetrated on England match days or after and England match, and alcohol-related cases on an England draw day are more likely to be reported sooner. \TM{I think this is a really interesting result! Potentially a nice link back to the Card and Lee results.} \NS{Can we quantify coefficients as a number of days with a CI in the main text. So ``5 days sooner'', etc.? }\NS{Is there a break between the text and the table? England loss no-alcohol cases occur sooner but England-loss no-alcohol cases occur later? England win no-alcohol cases reoccur sooner but England-win alcohol cases do not.}
 
-Finally, we are interested in whether an England match day transforms previously non-alcohol related incidents into alcohol-related ones. To explore this question, we ran a logistic regression on the subset of repeated cases, controlling for the type of the previous case (alcohol/non-alcohol related). We find that an England win day increases the likelihood of an alcohol-related case occurring, irrespective of whether the previous case was alcohol-related or not (see Table \ref{alctrans} in the Appendix).
+Finally, we are interested in whether an England match day transforms previously non-alcohol related incidents into alcohol-related ones. To explore this question, we ran a logistic regression on the subset of repeated cases, controlling for the type of the previous case (alcohol/non-alcohol related). We find that an England win day increases the likelihood of an alcohol-related case occurring, irrespective of whether the previous case was alcohol-related or not (see Table \ref{alctrans} in the Appendix). \NS{``Observations'' in table is now about cases so ``Observed cases''} \NS{This is a bit misleading. We are showing that repeat cases which are non-alcohol are often converted into alcohol cases, but this doesn't mean that all of our headline increase is about converted cases?}
 
 \AT{These results are weird...}
 
-These results indicate that apart from the higher likelihood of alcohol-involvement, domestic abuse cases perpetrated on England win days are not characteristically different from domestic abuse cases perpetrated on other days during the year. However, the high level of underreporting of domestic abuse cases warrant a cautious interpretation of these findings. 
+These results indicate that apart from the higher likelihood of alcohol-involvement, domestic abuse cases perpetrated on England win days are not characteristically different from domestic abuse cases perpetrated on other days during the year. However, the high level of underreporting of domestic abuse cases warrant a cautious interpretation of these findings.  
 
  Nevertheless, taken together, our results suggest that the increase is unlikely to be a result of changes in the victim's willingness to report cases (e.g., due to awareness campaigns). Other suggested explanations for the observed increase in the number of reported cases of domestic abuse on England match days include other high-profile events taking place around the time of the match and increased policing on the day \autocite{Brooks-Hay2018}. Our three-hour analysis of the England win effect (Figure \ref{fig:threehours}) show that the temporal pattern of the effect is highly consistent with a match-induced explanation of the increase. In addition, it is unclear why the effect of different policing practices would depend on the result of the match. 
 
 
-\subsection{Limitations}
+We have found that when England wins, there is a 67\% increase in domestic abuse---but only male-on-female abuse involving alcohol. The effect lasts for about 3-6 hours after the match. An increase is also seen in other violent crimes, predominantly those perpetrated by men on women. The effect is specific to football, but not rugby. The peculiar specificity of the effect will be useful in understanding the causes of abuse. 
 
+\NS{Given it is very hard to think of some other event that happens only on the win days, can we make a causal argument? And can we extend that to the effect of alcohol?}
 
 
 \newpage
 
 \section*{Appendix}
+
+\renewcommand{\thetable}{A\arabic{table}}
+\renewcommand{\thefigure}{A\arabic{figure}}
+\setcounter{table}{0}
+\setcounter{figure}{0}
 
 \begin{table}[ht]
 \centering
@@ -769,7 +778,7 @@ Observations & 95,091 & 95,091 & 272,793 \\
 \hline \\[-1.8ex] 
  & \multicolumn{1}{c}{\textit{Dependent variable:}} \\ 
 \cline{2-2} 
-\\[-1.8ex] & Alcohol \\ 
+	\\[-1.8ex] & Alcohol\NS{-involved in DA case} \\ 
 & Yes=1, \\ 
 & No=0 \\ 
 \hline \\[-1.8ex] 
